--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .main{
+        .body{
             height: 100vh;
             width: 100vw;
             display: flex;
@@ -32,10 +32,9 @@
     </style>
 </head>
 <body>
-    <div class="main">
-        <div class="box">
-            <p>This is center</p>
+    <div class="box">
+		<p>This is center</p>
+            
         </div>
-    </div>
 </body>
 </html>
